--- a/index.html
+++ b/index.html
@@ -64,26 +64,75 @@
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <h3 class="skill-heading">Vanilla JavaScript</h3>
-                    <p class="details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <h3 class="skill-heading">React</h3>
-                    <p class="details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <h3 class="skill-heading">Node.js</h3>
-                    <p class="details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <h3 class="skill-heading">MongoDB</h3>
-                    <p class="details">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
-
+        <section>
+            <h3 class="section-titel">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-colum">
+                    <h3 class="colum-titel">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="item-titel">Master in Computer Engineering</h4>
+                        <h5 class="item-stitel">Harvard University / 2015 - 2017</h5>
+                        <p class="item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="item-titel">Master in Computer Engineering</h4>
+                        <h5 class="item-stitel">Harvard University / 2015 - 2017</h5>
+                        <p class="item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="item-titel">Master in Computer Engineering</h4>
+                        <h5 class="item-stitel">Harvard University / 2015 - 2017</h5>
+                        <p class="item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-colum">
+                    <h3 class="colum-titel">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="item-titel">Sr. Font End Developer</h4>
+                        <h5 class="item-stitel">Apple Inc / 2020 - Current</h5>
+                        <p class="item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="item-titel">Jr. Font End Developer</h4>
+                        <h5 class="item-stitel">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="item-titel">HTML Developer</h4>
+                        <h5 class="item-stitel">Adobe Inc / 2017 - 2018</h5>
+                        <p class="item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="downlod-cv">
+            <button class="btn" id="button">Downlod CV</button>
+        </div>
     </main>
     <footer></footer>
 </body>
