finished the footer

--- a/index.html
+++ b/index.html
@@ -134,6 +134,36 @@
             <button class="btn" id="button">Downlod CV</button>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-colum">
+            <h3 class="section-titel">Lets Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <br>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-colum">
+            <h3 class="section-titel">Let’s Message me</h3>
+            <form class="contact" action="input">
+                <label for="name">
+                    <input type="text" placeholder="Your Name">
+                </label>
+                <br>
+                <label for="email">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                </label>
+                <label for="massage">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="massage"></textarea> 
+                </label>
+                
+                <label for="submit">
+                    <input class="btn" type="submit" value="Submit">
+                </label>
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
